--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Andrea Grabovac",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.0.1"
+    "bootstrap": "^5.0.1",
+    "bootstrap-icons": "^1.5.0"
   }
 }
