--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "corporate landing page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel ./index.html",
+    "build": "parcel build ./index.html"
+  },
+  "staticFiles": {
+    "staticPath": "./assets/products",
+    "watcherGlob": "**"
   },
   "author": "Andrea Grabovac",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.0.1",
-    "bootstrap-icons": "^1.5.0"
+    "bootstrap-icons": "^1.5.0",
+    "parcel-bundler": "^1.12.5"
+  },
+  "devDependencies": {
+    "parcel-plugin-static-files-copy": "^2.6.0"
   }
 }
