--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "parcel ./src/index.html",
     "prebuild": "npx rimraf build",
-    "build": "parcel build --public-url ./ ./src/index.html --experimental-scope-hoisting --out-dir build"
+    "build": "parcel build --public-url ./ ./src/index.html --experimental-scope-hoisting --out-dir build",
+    "deploy": "gh-pages -d build"
   },
   "staticFiles": {
     "staticPath": "./assets/products",
@@ -14,10 +15,12 @@
   },
   "author": "Andrea Grabovac",
   "license": "ISC",
+  "homepage": "https://andreaGrab.github.io/wbs-landing"
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0",
+    "gh-pages": "^3.2.3",
     "parcel-bundler": "^1.12.5"
   },
   "devDependencies": {
