--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "author": "Andrea Grabovac",
   "license": "ISC",
-  "homepage": "https://andreaGrab.github.io/wbs-landing"
+  "homepage": "https://andreaGrab.github.io/wbs-landing",
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
